Preparations for v1.0.7 - see change.log for details