@@ -187,9 +187,9 @@ public class VariableTest
 		variable.setDelegate(variable.getValueClass());
 		assertThat(variable.getLeftOperandOps()).isEqualTo(new IntegerOperand("*").getLeftOperandOps());
 		assertThat(variable.getRightOperandOps()).isEqualTo(new IntegerOperand("*").getRightOperandOps());
-		assertThat(variable.booleanEvaluation(new IntegerOperand("L", Integer.valueOf(2)), OperatorEnum.GE, new IntegerOperand("R", Integer.valueOf(2)))).isTrue();
-		assertThat(variable.numberEvaluation(new IntegerOperand("L", Integer.valueOf(7)), OperatorEnum.XOR, new IntegerOperand("R", Integer.valueOf(5)))).isEqualTo(new Integer(2));
-		assertThat(variable.numberEvaluation(OperatorEnum.INCR, new IntegerOperand("R", Integer.valueOf(8)))).isEqualTo(new Integer(9));
+		assertThat(variable.booleanEvaluation(new IntegerOperand("L", Long.valueOf(2)), OperatorEnum.GE, new IntegerOperand("R", Long.valueOf(2)))).isTrue();
+		assertThat(variable.numberEvaluation(new IntegerOperand("L", Long.valueOf(7)), OperatorEnum.XOR, new IntegerOperand("R", Long.valueOf(5)))).isEqualTo(new Long(2));
+		assertThat(variable.numberEvaluation(OperatorEnum.INCR, new IntegerOperand("R", Long.valueOf(8)))).isEqualTo(new Long(9));
 	    variable = new Variable(NAME);
 		otherTerm = new Parameter("x", "1.0f");
 		variable.unifyTerm(otherTerm, 1);
